bk_ida/gobmkida/g3/make_worms
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:825:12: error: expected expression
*( _OWORD *)( v10 + 48) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:825:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 48) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:826:12: error: expected expression
*( _OWORD *)( v10 + 64) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:826:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 64) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:827:12: error: expected expression
*( _OWORD *)( v10 + 80) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:827:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 80) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:828:12: error: expected expression
*( _OWORD *)( v10 + 96) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:828:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 96) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:829:12: error: expected expression
*( _OWORD *)( v10 + 112) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:829:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 112) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:830:12: error: expected expression
*( _OWORD *)( v10 + 128) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:830:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 128) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:831:12: error: expected expression
*( _OWORD *)( v10 + 144) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:831:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 144) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:832:12: error: expected expression
*( _OWORD *)( v10 + 160) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:832:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 160) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:833:12: error: expected expression
*( _OWORD *)( v10 + 176) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:833:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 176) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:834:12: error: expected expression
*( _OWORD *)( v10 + 192) = v12; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:834:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v10 + 192) = v12; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:927:26: error: use of undeclared identifier 'libs_1'
v23 = findlib( v21, 241, libs_1); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:971:25: error: use of undeclared identifier 'byte_A2CADF'
v38 = ( unsigned __int8)byte_A2CADF[m]; 
                        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1382:26: error: use of undeclared identifier 'libs_0'
v120 = findlib( i1, 241, libs_0); 
                         ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1389:8: error: use of undeclared identifier 'libs_0'
v127 = libs_0[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1405:8: error: use of undeclared identifier 'libs_0'
v122 = libs_0[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1424:8: error: use of undeclared identifier 'libs_0'
v122 = libs_0[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1444:8: error: use of undeclared identifier 'libs_0'
v122 = libs_0[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1464:8: error: use of undeclared identifier 'libs_0'
v122 = libs_0[v121]; 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/engine/worm.c:1688:7: error: use of undeclared identifier 'libs_1'
v25 = libs_1[v24]; 
      ^
29 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/make_worms/src/obj/1/worm.o] Error 1
